@@ -1,11 +1,16 @@
-"""Autogenerated protocols from type+method names or URI"""
+"""Autogenerated protocols from type+method names, URI, sequence, etc."""
 
-from interfaces import Protocol, allocate_lock
+from interfaces import Protocol, allocate_lock, Interface
 from advice import metamethod, supermeta
 from api import declareAdapterForProtocol, declareAdapterForType
+from api import declareAdapter, adapt
 from adapters import NO_ADAPTER_NEEDED
 
-__all__ = ['protocolForType', 'protocolForURI']
+__all__ = [
+    'protocolForType', 'protocolForURI', 'sequenceOf', 'IBasicSequence',
+    'URIProtocol', 'TypeSubset', 'WeakSubset', 'ADAPT_SEQUENCE',
+    'SequenceProtocol'
+]
 
 
 class URIProtocol(Protocol):
@@ -31,11 +36,6 @@ class TypeSubset(Protocol):
 
     def __repr__(self):
         return "TypeSubset(%r,%r)" % (self.baseType,self.methods)
-
-
-
-
-
 
 
 
@@ -80,6 +80,47 @@ class WeakSubset(TypeSubset,object):
 
 
 
+class SequenceProtocol(Protocol):
+
+    """Protocol representing a "sequence of" some base protocol"""
+
+    def __init__(self,baseProtocol):
+        self.baseProtocol = baseProtocol
+        Protocol.__init__(self)
+
+    def __repr__(self):
+        return "sequenceOf(%r)" % self.baseProtocol
+
+
+class IBasicSequence(Interface):
+
+    """Non-string, iterable object sequence"""
+
+    def __iter__():
+        """Return an iterator over the sequence"""
+
+
+declareAdapter(
+    NO_ADAPTER_NEEDED,
+    provides=[IBasicSequence],
+    forTypes=[list,tuple]
+)
+
+
+def ADAPT_SEQUENCE(ob, proto):
+
+    """Convert iterable 'ob' into list of objects implementing 'proto'"""
+
+    marker = object()
+    out = []
+    proto = proto.baseProtocol  # get the protocol to adapt to
+    for item in ob:
+        item = adapt(item,proto, marker)
+        if item is marker:
+            return None     # can't adapt unless all members adapt
+        out.append(item)
+    return out
+
 __registryLock = allocate_lock()
 
 registry = {}
@@ -111,6 +152,47 @@ def protocolForType(baseType, methods=(), implicit=False):
 
     key = baseType, methods, (not not implicit) # ensure implicit is true/false
     return __protocolForType(key)
+
+
+
+
+
+
+
+
+
+
+def sequenceOf(baseProtocol):
+
+    """Return a protocol representing an sequence of a given base protocol"""
+
+    key = (sequenceOf, baseProtocol)
+
+    __registryLock.acquire()
+
+    try:
+
+        try:
+            return registry[key]
+
+        except KeyError:
+            proto = registry[key] = SequenceProtocol(baseProtocol)
+            declareAdapterForProtocol(proto, ADAPT_SEQUENCE, IBasicSequence)
+            return proto
+
+    finally:
+        __registryLock.release()
+
+
+
+
+
+
+
+
+
+
+
 
 
 
